# atlas

./: .gitignore  AGENTS.md  CODEX.md  Makefile  README.md  TESTING.md
apps/atlas-core/: README.md  pyproject.toml
apps/atlas-core/src/atlas_core/contexts/interaction/application/: publish_head_expression.py  store_conversation_turn.py  transition_operational_state.py
apps/atlas-core/src/atlas_core/contexts/interaction/domain/: conversation_turn.py  expression.py  interaction_session.py  memory_fact.py  operational_state.py
apps/atlas-core/src/atlas_core/contexts/interaction/ports/: conversation_repository.py  head_expression_output.py  memory_repository.py  operational_state_store.py
apps/atlas-core/tests/contract/contexts/interaction/: test_conversation_repository_port.py  test_head_expression_output_port.py  test_memory_repository_port.py  test_operational_state_store_port.py
apps/atlas-core/tests/integration/contexts/interaction/: test_publish_head_expression_integration.py  test_store_conversation_turn_integration.py  test_transition_operational_state_integration.py
apps/atlas-core/tests/unit/contexts/interaction/application/: test_publish_head_expression.py  test_store_conversation_turn.py  test_transition_operational_state.py
apps/atlas-core/tests/unit/contexts/interaction/domain/: test_conversation_turn.py  test_interaction_session.py  test_memory_fact.py  test_operational_state.py
context/: backlog.md  current-sprint.md  hardware-inventory.md  phase-status.md  project-context.md
docs/: AI_CONTEXT.md
docs/adr/: 0001-monorepo.md  0003-ddd-lite.md  (+5 more)
(+7 files in other folders)
